# Concepts_of_CPP

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
hw01/: .gitignore  hw01.cpp  library.cpp  library.h
hw02/: .gitignore  CMakeLists.txt  combinatorics.cpp  run.cpp
hw03/: contact_list.cpp  contact_list.h  run.cpp
hw04/: vm.cpp  vm.h
hw05/: CMakeLists.txt  run.cpp  token.cpp  token.h  validator.cpp  validator.h
hw06/: CMakeLists.txt  run.cpp  vector.cpp  vector.h
hw07/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  filedescriptor.cpp  filedescriptor.h  run.cpp  server.cpp  server.h  socket.cpp  socket.h
hw08/: CMakeLists.txt  audio.cpp  audio.h  document.cpp  document.h  file.cpp  file.h  filecontent.cpp  filecontent.h  filesystem.cpp  filesystem.h  image.cpp  image.h  run.cpp  video.cpp  video.h
hw09/: vector.h
hw10/: CMakeLists.txt  bencode.cpp  bencode.h  hw10.h  primes.h  quadruple.h  run.cpp
hw11/: constexprmap.h
hw12/: hw12.h  logger.cpp  logger.h  monitor.cpp  monitor.h  run.cpp
tests/: CMakeLists.txt
tests/hw01/: .gitignore  compile
tests/hw03/: test03.cpp
tests/hw04/: test04.cpp
tests/hw06/: test06.cpp
tests/hw07/: test07.cpp
tests/hw08/: test08.cpp
tests/hw09/: test09.cpp
tests/hw10/: test10.cpp
tests/hw11/: test11.cpp
